v106-Descriptions auto-adapt to 999 chars limit
The video description automatically adapts to fit in 999 characters

--- a/config.ini
+++ b/config.ini
@@ -5,3 +5,4 @@ path_summary_top = summary_top.txt
 path_summary_bot = summary_bot.txt
 start_index = 1
 hashtag_index = Block
+descriptions_auto_adapt = true
